--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.10",
-    "vue-socket.io-extended": "^4.0.5"
+    "vue-socket.io-extended": "^4.0.5",
+    "vuex": "^3.6.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
