--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "js-cookie": "^2.2.1",
     "socket.io-client": "^3.0.4",
     "vue": "^2.5.2",
+    "vue-cookie": "^1.1.4",
+    "vue-cookies": "^1.7.4",
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.10",
     "vue-socket.io-extended": "^4.0.5",
