Live bid feature now works.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "install":  "concurrently  \"cd server && npm i\" \"cd client && npm i\"", 
     "start": "concurrently  \"cd server && npm start\" \"cd client && npm run dev\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
