--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.0.1",
     "vue-socket.io": "^3.0.10",
     "vue-socket.io-extended": "^4.0.5",
+    "vue-sweetalert2": "^4.1.1",
     "vuex": "^3.6.0"
   },
   "devDependencies": {
